--- a/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
+++ b/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>MassTransit.Host.RabbitMQ</id>
-		<version>1.0.0.3-alpha</version>
+		<version>1.0.0.4-alpha</version>
 		<title>MassTransit Consumer Host for RabbitMQ endpoints</title>
 		<authors>Ron Griffin</authors>
 		<owners>rongriffin@gmail.com</owners>
@@ -14,15 +14,15 @@
 		<copyright>Copyright 2014</copyright>
 		<tags>MassTransit host RabbitMQ</tags>
 		<dependencies>			
-			<dependency id="Castle.Core" version="[3.3.0,4.0.0)"/>
-			<dependency id="Castle.Windsor" version="[3.3.0,4.0.0)"/>
-			<dependency id="Magnum" version="[2.1.2,3.0.0)"/>
-			<dependency id="MassTransit" version="[2.9.5,3.0.0)"/>
-			<dependency id="MassTransit.CastleWindsor" version="[2.9.5,3.0.0)" />
-			<dependency id="MassTransit.RabbitMQ" version="[2.9.5,3.0.0)" />
-			<dependency id="Newtonsoft.Json" version="[5.0.8,6.0.0)"  />
-			<dependency id="RabbitMQ.Client" version="[3.2.1,4.0.0)"  />
-			<dependency id="Topshelf" version="[3.1.3,4.0.0)" />
+			<dependency id="Castle.Core" version="3.2.0"/>
+			<dependency id="Castle.Windsor" version="3.2.0"/>
+			<dependency id="Magnum" version="2.1.2"/>
+			<dependency id="MassTransit" version="2.9.5"/>
+			<dependency id="MassTransit.CastleWindsor" version="2.9.5" />
+			<dependency id="MassTransit.RabbitMQ" version="2.9.5" />
+			<dependency id="Newtonsoft.Json" version="5.0.8"  />
+			<dependency id="RabbitMQ.Client" version="3.1.2"  />
+			<dependency id="Topshelf" version="3.1.3" />
 		</dependencies>
 	</metadata>
 	<files>
