Updating nuget installer for cleaner references (no redirects)

--- a/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
+++ b/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
@@ -2,14 +2,14 @@
 <package >
 	<metadata>
 		<id>MassTransit.Host.RabbitMQ</id>
-		<version>1.0.0.4-alpha</version>
+		<version>1.1.0.0</version>
 		<title>MassTransit Consumer Host for RabbitMQ endpoints</title>
 		<authors>Ron Griffin</authors>
 		<owners>rongriffin@gmail.com</owners>
 		<licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Service Bus Host for Mass Transit services using RabbitMQ</description>
-		<releaseNotes>initial version</releaseNotes>
+		<releaseNotes>Cleaner dependencies and install</releaseNotes>
 		<projectUrl>https://github.com/rongriffin/MassTransit.Host.RabbitMQ</projectUrl>
 		<copyright>Copyright 2014</copyright>
 		<tags>MassTransit host RabbitMQ</tags>
