--- a/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
+++ b/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
@@ -3,7 +3,7 @@
 	<metadata>
 		<id>MassTransit.Host.RabbitMQ</id>
 		<version>1.1.0.0</version>
-		<title>MassTransit Consumer Host for RabbitMQ endpoints</title>
+		<title>MassTransit.Host.RabbitMQ</title>
 		<authors>Ron Griffin</authors>
 		<owners>rongriffin@gmail.com</owners>
 		<licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
