Supporting RabbitMQ credentials and updating sample app

--- a/Samples/MassTransitHostProducerConsumer/Consumer/MassTransit.Host.RabbitMQ.exe.config
+++ b/Samples/MassTransitHostProducerConsumer/Consumer/MassTransit.Host.RabbitMQ.exe.config
@@ -3,8 +3,11 @@
 	<configSections>
 		<section name="massTransitServiceBusConfig" type="System.Configuration.NameValueSectionHandler" />
 	</configSections>
+
 	<massTransitServiceBusConfig>
 		<!--configure the endpoint address to the RabbitMQ address to use for messaging (e.g. rabbitmq://localhost/myqueue) -->
 		<add key="endpointAddress" value="rabbitmq://localhost/HostConsumer" />
+		<add key="rabbitMqUserName" value="guest" />
+		<add key="rabbitMqPassword" value="guest" />
 	</massTransitServiceBusConfig>
 </configuration>
