Change rabbitmq setting to a connection string so it can more easily be encrypted.

--- a/Samples/MassTransitHostProducerConsumer/Consumer/MassTransit.Host.RabbitMQ.exe.config
+++ b/Samples/MassTransitHostProducerConsumer/Consumer/MassTransit.Host.RabbitMQ.exe.config
@@ -1,13 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<configSections>
-		<section name="massTransitServiceBusConfig" type="System.Configuration.NameValueSectionHandler" />
-	</configSections>
-
-	<massTransitServiceBusConfig>
-		<!--configure the endpoint address to the RabbitMQ address to use for messaging (e.g. rabbitmq://localhost/myqueue) -->
-		<add key="endpointAddress" value="rabbitmq://localhost/HostConsumer" />
-		<add key="rabbitMqUserName" value="guest" />
-		<add key="rabbitMqPassword" value="guest" />
-	</massTransitServiceBusConfig>
+	<connectionStrings>
+		<add name="Host.RabbitMQConnection" connectionString="endpoint=rabbitmq://localhost/HostTest; userId=guest; password=guest" />
+	</connectionStrings>
 </configuration>
