--- a/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
+++ b/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
@@ -2,14 +2,14 @@
 <package >
 	<metadata>
 		<id>MassTransit.Host.RabbitMQ</id>
-		<version>1.2.0</version>
+		<version>1.3.0</version>
 		<title>MassTransit.Host.RabbitMQ</title>
 		<authors>Ron Griffin</authors>
 		<owners>rongriffin@gmail.com</owners>
 		<licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Service Bus Host for Mass Transit services using RabbitMQ</description>
-		<releaseNotes>Support RabbitMQ credentials through .config settings</releaseNotes>
+		<releaseNotes>Changed RabbitMQ config to come from a connection string for better .config encryption support.</releaseNotes>
 		<projectUrl>https://github.com/rongriffin/MassTransit.Host.RabbitMQ</projectUrl>
 		<copyright>Copyright 2014</copyright>
 		<tags>MassTransit host RabbitMQ</tags>
