--- a/MassTransit.Host.RabbitMQ/packages.config
+++ b/MassTransit.Host.RabbitMQ/packages.config
@@ -7,6 +7,7 @@
   <package id="MassTransit.CastleWindsor" version="2.9.5" targetFramework="net45" />
   <package id="MassTransit.RabbitMQ" version="2.9.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.2.1" targetFramework="net45" />
   <package id="Topshelf" version="3.1.3" targetFramework="net45" />
 </packages>
