--- a/Samples/MassTransitHostProducerConsumer/Consumer/Consumer.csproj
+++ b/Samples/MassTransitHostProducerConsumer/Consumer/Consumer.csproj
@@ -48,9 +48,9 @@
     <Reference Include="MassTransit">
       <HintPath>..\packages\MassTransit.2.9.5\lib\net40\MassTransit.dll</HintPath>
     </Reference>
-    <Reference Include="MassTransit.Host.RabbitMQ, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="MassTransit.Host.RabbitMQ, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MassTransit.Host.RabbitMQ.1.3.0\lib\net45\MassTransit.Host.RabbitMQ.exe</HintPath>
+      <HintPath>..\packages\MassTransit.Host.RabbitMQ.1.5.0\lib\net45\MassTransit.Host.RabbitMQ.exe</HintPath>
     </Reference>
     <Reference Include="MassTransit.Transports.RabbitMq">
       <HintPath>..\packages\MassTransit.RabbitMQ.2.9.5\lib\net40\MassTransit.Transports.RabbitMq.dll</HintPath>
@@ -60,6 +60,9 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="RabbitMQ.Client">
       <HintPath>..\packages\RabbitMQ.Client.3.2.1\lib\net30\RabbitMQ.Client.dll</HintPath>
@@ -82,6 +85,12 @@
   <ItemGroup>
     <None Include="MassTransit.Host.RabbitMQ.exe.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
