--- a/Samples/MassTransitHostProducerConsumer/Consumer/packages.config
+++ b/Samples/MassTransitHostProducerConsumer/Consumer/packages.config
@@ -5,9 +5,12 @@
   <package id="Magnum" version="2.1.2" targetFramework="net45" />
   <package id="MassTransit" version="2.9.5" targetFramework="net45" />
   <package id="MassTransit.CastleWindsor" version="2.9.5" targetFramework="net45" />
-  <package id="MassTransit.Host.RabbitMQ" version="1.3.0" targetFramework="net45" />
+  <package id="MassTransit.Host.RabbitMQ" version="1.5.0" targetFramework="net45" />
   <package id="MassTransit.RabbitMQ" version="2.9.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
+  <package id="NLog.Config" version="3.1.0.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="3.1.0.0" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.2.1" targetFramework="net45" />
   <package id="Topshelf" version="3.1.3" targetFramework="net45" />
 </packages>
