--- a/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
+++ b/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
@@ -2,28 +2,28 @@
 <package >
 	<metadata>
 		<id>MassTransit.Host.RabbitMQ</id>
-		<version>1.7.0</version>
+		<version>2.0.0</version>
 		<title>MassTransit.Host.RabbitMQ</title>
 		<authors>Ron Griffin</authors>
 		<owners>rongriffin@gmail.com</owners>
 		<licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Service Bus Host for Mass Transit services using RabbitMQ</description>
-		<releaseNotes>Adding exit code to play nice with batch install</releaseNotes>
+		<releaseNotes>Updating to MassTransit 3 and upgrading all other dependencies</releaseNotes>
 		<projectUrl>https://github.com/rongriffin/MassTransit.Host.RabbitMQ</projectUrl>
 		<copyright>Copyright 2014</copyright>
 		<tags>MassTransit host RabbitMQ</tags>
-		<dependencies>			
-			<dependency id="Castle.Core" version="3.2.0"/>
-			<dependency id="Castle.Windsor" version="3.2.0"/>
-			<dependency id="Magnum" version="2.1.2"/>
-			<dependency id="MassTransit" version="2.9.5"/>
-			<dependency id="MassTransit.CastleWindsor" version="2.9.5" />
-			<dependency id="MassTransit.RabbitMQ" version="2.9.5" />
-			<dependency id="Newtonsoft.Json" version="5.0.8"  />
-			<dependency id="RabbitMQ.Client" version="3.1.2"  />
-			<dependency id="Topshelf" version="3.1.3" />
-			<dependency id="NLog" version="3.1.0.0"/>
+		<dependencies>
+			<dependency id="Castle.Core" version="3.3.3"/>
+			<dependency id="Castle.Windsor" version="3.3.0"/>
+			<dependency id="Magnum" version="2.1.3"/>
+			<dependency id="MassTransit" version="3.3.5"/>
+			<dependency id="MassTransit.CastleWindsor" version="3.3.5" />
+			<dependency id="MassTransit.RabbitMQ" version="3.3.5" />
+			<dependency id="Newtonsoft.Json" version="7.0.1"  />
+			<dependency id="RabbitMQ.Client" version="3.6.2"  />
+			<dependency id="Topshelf" version="4.0.1" />
+			<dependency id="NLog" version="4.3.5"/>
 		</dependencies>
 	</metadata>
 	<files>
