--- a/MassTransit.Host.RabbitMQ/packages.config
+++ b/MassTransit.Host.RabbitMQ/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
-  <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
-  <package id="Magnum" version="2.1.2" targetFramework="net45" />
-  <package id="MassTransit" version="2.9.5" targetFramework="net45" />
-  <package id="MassTransit.CastleWindsor" version="2.9.5" targetFramework="net45" />
-  <package id="MassTransit.RabbitMQ" version="2.9.5" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
-  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
-  <package id="RabbitMQ.Client" version="3.2.1" targetFramework="net45" />
-  <package id="Topshelf" version="3.1.3" targetFramework="net45" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
+  <package id="Magnum" version="2.1.3" targetFramework="net452" />
+  <package id="MassTransit" version="3.3.5" targetFramework="net452" />
+  <package id="MassTransit.CastleWindsor" version="3.3.5" targetFramework="net452" />
+  <package id="MassTransit.RabbitMQ" version="3.3.5" targetFramework="net452" />
+  <package id="NewId" version="2.1.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="NLog" version="4.3.5" targetFramework="net452" />
+  <package id="RabbitMQ.Client" version="3.6.2" targetFramework="net452" />
+  <package id="Topshelf" version="4.0.1" targetFramework="net452" />
 </packages>
