--- a/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
+++ b/MassTransit.Host.RabbitMQ/MassTransit.Host.RabbitMQ.nuspec
@@ -2,28 +2,34 @@
 <package >
 	<metadata>
 		<id>MassTransit.Host.RabbitMQ</id>
-		<version>2.0.4</version>
+		<version>3.0.0</version>
 		<title>MassTransit.Host.RabbitMQ</title>
 		<authors>Ron Griffin</authors>
 		<owners>rongriffin@gmail.com</owners>
 		<licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Service Bus Host for Mass Transit services using RabbitMQ</description>
-		<releaseNotes>Explicitly restore the MT 2 behavior of 5 immediate retries.</releaseNotes>
+		<releaseNotes>Upgrade to MassTransit v5</releaseNotes>
 		<projectUrl>https://github.com/rongriffin/MassTransit.Host.RabbitMQ</projectUrl>
 		<copyright>Copyright 2014</copyright>
 		<tags>MassTransit host RabbitMQ</tags>
 		<dependencies>
 			<dependency id="Castle.Core" version="3.3.3"/>
 			<dependency id="Castle.Windsor" version="3.3.0"/>
+			<dependency id="GreenPipes" version="2.1.0"/>
 			<dependency id="Magnum" version="2.1.3"/>
-			<dependency id="MassTransit" version="3.3.5"/>
+			<dependency id="MassTransit" version="5.1.0"/>
 			<dependency id="MassTransit.CastleWindsor" version="3.3.5" />
-			<dependency id="MassTransit.RabbitMQ" version="3.3.5" />
-			<dependency id="Newtonsoft.Json" version="7.0.1"  />
-			<dependency id="RabbitMQ.Client" version="3.6.2"  />
-			<dependency id="Topshelf" version="4.0.1" />
+			<dependency id="MassTransit.RabbitMQ" version="5.1.0" />
+			<dependency id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28"/>
+			<dependency id="NewId" version="3.0.1"/>
+			<dependency id="Newtonsoft.Json" version="11.0.2"  />
+			<dependency id="Newtonsoft.Json.Bson" version="1.0.1"/>
 			<dependency id="NLog" version="4.3.5"/>
+			<dependency id="RabbitMQ.Client" version="5.0.1"  />
+			<dependency id="System.Reflection.Emit.Lightweight" version="4.3.0"/>
+			<dependency id="System.ValueTuple" version="4.4.0"/>
+			<dependency id="Topshelf" version="4.0.1" />
 		</dependencies>
 	</metadata>
 	<files>
