Updating MT and samples

--- a/Samples/MassTransitHostProducerConsumer/Consumer/NLog.config
+++ b/Samples/MassTransitHostProducerConsumer/Consumer/NLog.config
@@ -10,10 +10,13 @@
 
     <target xsi:type="Console" name="c"
             layout="${longdate} ${uppercase:${level}} ${message}" />
+    <target xsi:type="File" name="f"
+            layout="${longdate} ${uppercase:${level}} ${message}" fileName="output.txt" />
   </targets>
 
   <rules>
 
     <logger name="*" minlevel="Trace" writeTo="c" />
+    <logger name="*" minlevel="Trace" writeTo="f" />
   </rules>
 </nlog>
